--- a/source/html/index.html
+++ b/source/html/index.html
@@ -13,7 +13,6 @@
   </div>
 
   <div class="wrapper">
-    <-- для внутренних страниц используйте "headerActiveLinkIndex": 0\1\2 --> 
     @@include("source/html/base/header.html", {
       "index": true
     })
@@ -22,6 +21,8 @@
       <div class="container">
         <p><a href="#" data-open-modal="feedback">modal--feedback link</a></p>
         <p><a href="#" data-open-modal="success">modal--success link</a></p>
+        <p class="border-8 border-amber-400">modal--success link</p>
+        <p class="border-8 border-amber-400 pt-10">modal--success link</p>
       </div>
     </main>
 
