feat: add link in header

--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -1,5 +1,5 @@
-<header class="header @@if (context.mod) { header--@@mod }">
-  <div class="container">
+<header class="header bg-white @@if (context.mod) { header--@@mod }">
+  <div class="container flex flex-wrap">
     @@if (!context.index) {
       <a class="header__logo" href="index.html" aria-label="Переход на главную">
         <div class="w-8 h-8 rounded overflow-hidden">
@@ -14,32 +14,12 @@
         </div>
         <span>Степанова Мария</span>
         <span class="block w-5 h-6">
-          <svg class="w-full h-full" width="22" height="24" aria-hidden="true">
-            <use xlink:href="#icon-hand"></use>
-          </svg>
+<!--          <svg class="w-full h-full" width="22" height="24" aria-hidden="true">-->
+<!--            <use xlink:href="#icon-hand"></use>-->
+<!--          </svg>-->
         </span>
       </div>
     }
-
-<!--    <nav class="main-nav">-->
-<!--      <button class="main-nav__toggle btn-reset" type="button" aria-label="Переключатель отображения меню" aria-pressed="false">-->
-<!--        <svg width="20" height="20" aria-hidden="true">-->
-<!--          <use xlink:href="#icon-burger"></use>-->
-<!--        </svg>-->
-<!--      </button>-->
-<!--      <div class="main-nav__wrapper">-->
-<!--        <ul class="main-nav__list">-->
-<!--          <li class="main-nav__item">-->
-<!--            <a class="main-nav__link @@if (context.headerActiveLinkIndex === 0) { is-active }" @@if (context.headerActiveLinkIndex !== 0) { href="#" }>Страница 1</a>-->
-<!--          </li>-->
-<!--          <li class="main-nav__item">-->
-<!--            <a class="main-nav__link @@if (context.headerActiveLinkIndex === 1) { is-active }" @@if (context.headerActiveLinkIndex !== 1) { href="#" }>Страница 2</a>-->
-<!--          </li>-->
-<!--          <li class="main-nav__item">-->
-<!--            <a class="main-nav__link @@if (context.headerActiveLinkIndex === 2) { is-active }" @@if (context.headerActiveLinkIndex !== 2) { href="#" }>Страница 3</a>-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--    </nav>-->
+    <a href="#" class="block bg-ebony py-1 px-3 text-base text-white rounded-lg">Резюме лежит здесь</a>
   </div>
 </header>
