--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -1,15 +1,15 @@
-<header class="header bg-white @@if (context.mod) { header--@@mod }">
+<header class="header bg-white py-[14px] @@if (context.mod) { header--@@mod }">
   <div class="container flex flex-wrap">
     @@if (!context.index) {
-      <a class="header__logo" href="index.html" aria-label="Переход на главную">
-        <div class="w-8 h-8 rounded overflow-hidden">
-          <img src="./img/logo/logo.jpg" alt="Фотография" srcset="./img/logo/logo@2x.jpg 2x"/>
+      <a class="header__logo flex items-center mr-auto" href="index.html" aria-label="Переход на главную">
+        <div class="w-8 h-8 mr-4 rounded-full overflow-hidden">
+          <img class="w-full h-full object-cover" src="./img/logo/logo.jpg" alt="Фотография" srcset="./img/logo/logo@2x.jpg 2x" width="32" height="32"/>
         </div>
       </a>
     }
     @@if (context.index) {
-      <div class="header__logo flex">
-        <div class="w-8 h-8 rounded-full overflow-hidden">
+      <div class="header__logo flex items-center mr-auto">
+        <div class="w-8 h-8 mr-4 rounded-full overflow-hidden">
           <img class="w-full h-full object-cover" src="./img/logo/logo.jpg" alt="Фотография" srcset="./img/logo/logo@2x.jpg 2x" width="32" height="32"/>
         </div>
         <span>Степанова Мария</span>
@@ -20,6 +20,6 @@
         </span>
       </div>
     }
-    <a href="#" class="block bg-ebony py-1 px-3 text-base text-white rounded-lg">Резюме лежит здесь</a>
+    <a href="https://career.samolet.ru/" class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Резюме лежит здесь</a>
   </div>
 </header>
