feat: add about block

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,28 +20,35 @@
   <main>
     <section class="intro relative pb-10 pt-[73px] bg-black-russian">
       <div class="intro__bg w-full h-full absolute top-0 left-0 z-0">
-        <img class="opacity-10 w-full h-full object-cover" src="./img/bg/introbg-3.png" width="1440" height="481" alt="Фон"/>
-        <img class="w-full h-full absolute top-0 left-0" src="./img/bg/introbg-2.png" width="1440" height="481" alt="Фон"/>
+        <img class="opacity-10 w-full h-full object-cover" src="./img/bg/introbg-3.png" width="1440" height="481"
+             alt="Фон"/>
+        <img class="w-full h-full absolute top-0 left-0" src="./img/bg/introbg-2.png" width="1440" height="481"
+             alt="Фон"/>
       </div>
       <div class="container relative z-10">
         <h1 class="hidden">Портфолио</h1>
         <div class="flex max-w-[908px] mx-auto mb-10">
           <div class="relative w-72 h-64 shrink-0 mr-12">
             <div class="rounded-full overflow-hidden w-214px aspect-square">
-              <img class="w-full h-full object-cover" src="./img/content/intro/bg.jpg" alt="Фотография" srcset="./img/content/intro/bg@2x.jpg 2x" width="214" height="214"/>
+              <img class="w-full h-full object-cover" src="./img/content/intro/bg.jpg" alt="Фотография"
+                   srcset="./img/content/intro/bg@2x.jpg 2x" width="214" height="214"/>
             </div>
-            <div class="rounded-full overflow-hidden w-214px aspect-square absolute left-0 top-0 translate-x-16 translate-y-8">
-              <img class="w-full h-full object-cover" src="./img/content/intro/photo.png" alt="Фотография" srcset="./img/content/intro/photo@2x.png 2x" width="214" height="214"/>
+            <div
+              class="rounded-full overflow-hidden w-214px aspect-square absolute left-0 top-0 translate-x-16 translate-y-8">
+              <img class="w-full h-full object-cover" src="./img/content/intro/photo.png" alt="Фотография"
+                   srcset="./img/content/intro/photo@2x.png 2x" width="214" height="214"/>
             </div>
           </div>
           <div class="flex flex-wrap">
             <h2 class="text-xl mb-6 text-white w-full">Привет! Меня зовут Маша </h2>
             <div class="flex flex-col gap-y-4 text-base text-periwinkle">
               <p>Я продуктовый дизайнер. Создаю интерфейсы, которые полезны для пользователей и выгодны бизнесу. </p>
-              <p>Моя работа основана на анализе данных. Я провожу UX-исследования и обращаюсь к метрикам. Слежу за обратной
+              <p>Моя работа основана на анализе данных. Я провожу UX-исследования и обращаюсь к метрикам. Слежу за
+                обратной
                 связью от пользователей, чтобы понимать их потребности и ожидания. Моя цель — создавать лучший
                 пользовательский путь.</p>
-              <p>Сейчас я работаю в <a href="#" class="text-periwinkle hover:text-white transition-colors underline">SMLT Tech.</a></p>
+              <p>Сейчас я работаю в <a href="#" class="text-periwinkle hover:text-white transition-colors underline">SMLT Tech.</a>
+              </p>
             </div>
           </div>
         </div>
@@ -65,9 +72,110 @@
         </ul>
       </div>
     </section>
+    <section class="experience pt-[42px] pb-40">
+      <div class="container">
+        <h2 class="text-l text-ebony mb-2">О моем опыте</h2>
+        <p class="text-s text-east-bay mb-8">Здесь я расскажу о проектах, над которыми я работала </p>
+        <ul class="flex flex-wrap gap-8">
+          <li class="flex w-[calc(50%-16px)]">
+            <article class="card">
+              <a href="#" class="">
+                <div class="card__img-wrapper">
+                  <div class="card__img-bg">
+                    <img src="./img/bg/card/card-bg.jpg" srcset="./img/bg/card/card-bg@2x.jpg 2x" alt="Фон" width="672"
+                         height="378">
+                  </div>
+                  <div class="card__img">
+                    <img src="./img/content/cards/card-1.png" srcset="./img/content/cards/card-1@2x.png 2x"
+                         alt="Изображение проекта" width="576" height="298">
+                  </div>
+                </div>
+                <div class="card__bottom">
+                  <p class="card__title">Балансы отпусков</p>
+                  <div class="card__text-wrapper">
+                    <p>Отображение логики начисления ежегодного отпуска для сотрудников компании. Пользователь не
+                      понимал,
+                      как начисляется и как списывается баланс, и обращался к техническую поддержку</p>
+                  </div>
+                </div>
+              </a>
+            </article>
+          </li>
+          <li class="flex w-[calc(50%-16px)]">
+            <article class="card">
+              <a href="#" class="">
+                <div class="card__img-wrapper">
+                  <div class="card__img-bg">
+                    <img src="./img/bg/card/card-bg.jpg" srcset="./img/bg/card/card-bg@2x.jpg 2x" alt="Фон" width="672"
+                         height="378">
+                  </div>
+                  <div class="card__img">
+                    <img src="./img/content/cards/card-2.png" srcset="./img/content/cards/card-2@2x.png 2x"
+                         alt="Изображение проекта" width="597" height="300">
+                  </div>
+                </div>
+                <div class="card__bottom">
+                  <p class="card__title">Корпоративный портал</p>
+                  <div class="card__text-wrapper">
+                    <p>Работа над вовлеченностью. Добавление развлекательной фичи в продукт и развитие личных блогов на
+                      корпоративном портале</p>
+                  </div>
+                </div>
+              </a>
+            </article>
+          </li>
+          <li class="flex w-[calc(50%-16px)]">
+            <article class="card">
+              <a href="#" class="">
+                <div class="card__img-wrapper">
+                  <div class="card__img-bg">
+                    <img src="./img/bg/card/card-bg.jpg" srcset="./img/bg/card/card-bg@2x.jpg 2x" alt="Фон" width="672"
+                         height="378">
+                  </div>
+                  <div class="card__img">
+                    <img src="./img/content/cards/card-2.png" srcset="./img/content/cards/card-2@2x.png 2x"
+                         alt="Изображение проекта" width="597" height="300">
+                  </div>
+                </div>
+                <div class="card__bottom">
+                  <p class="card__title">Корпоративный портал</p>
+                  <div class="card__text-wrapper">
+                    <p>Работа над вовлеченностью. Добавление развлекательной фичи в продукт и развитие личных блогов на
+                      корпоративном портале</p>
+                  </div>
+                </div>
+              </a>
+            </article>
+          </li>
+          <li class="flex w-[calc(50%-16px)]">
+            <article class="card">
+              <a href="#" class="">
+                <div class="card__img-wrapper">
+                  <div class="card__img-bg">
+                    <img src="./img/bg/card/card-bg.jpg" srcset="./img/bg/card/card-bg@2x.jpg 2x" alt="Фон" width="672"
+                         height="378">
+                  </div>
+                  <div class="card__img">
+                    <img src="./img/content/cards/card-1.png" srcset="./img/content/cards/card-1@2x.png 2x"
+                         alt="Изображение проекта" width="576" height="298">
+                  </div>
+                </div>
+                <div class="card__bottom">
+                  <p class="card__title">Балансы отпусков</p>
+                  <div class="card__text-wrapper">
+                    <p>Отображение логики начисления ежегодного отпуска для сотрудников компании. Пользователь не
+                      понимал,
+                      как начисляется и как списывается баланс, и обращался к техническую поддержку</p>
+                  </div>
+                </div>
+              </a>
+            </article>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
-  @@include("source/html/base/footer.html")
 
   @@include("source/html/base/modal.html", {
   "name": "feedback"
