feat: add popover

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -58,7 +58,15 @@
         </div>
         <ul class="flex flex-wrap list-bools text-east-bay">
           <li class="list-bools__item">
-            <button type="button" class="text-base text-periwinkle hover:text-white transition-colors">e-mail</button>
+            <button type="button" class="text-base text-periwinkle hover:text-white transition-colors"
+                    data-tippy-content="<a href='mailto:stepanova-14-02@yandex.ru'>Stepanova-14-02@yandex.ru</a>
+                                        <button type='button'>
+                                          <svg width='16' height='16'>
+                                            <use xlink:href='#icon-copy'></use>
+                                          </svg>
+                                        </button>">
+                                        e-mail
+            </button>
           </li>
           <li class="list-bools__item">
             <button type="button" class="text-base text-periwinkle hover:text-white transition-colors">telegram</button>
