feat: add about block

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -56,7 +56,7 @@
           <p class="text-base text-white">Мои контакты</p>
           <span class="block w-[22px] h-[20px]"></span>
         </div>
-        <ul class="flex flex-wrap list-bools text-east-bay">
+        <ul class="flex flex-wrap list-bools text-east-bay" data-animation-contacts="opacity">
           <li class="list-bools__item">
             <button type="button" class="text-base text-periwinkle hover:text-white transition-colors"
                     data-tippy-content="<a href='mailto:stepanova-14-02@yandex.ru'>Stepanova-14-02@yandex.ru</a>
