--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -1,4 +1,4 @@
-<header class="header bg-white py-[14px] @@if (context.mod) { header--@@mod }">
+<header class="header fixed z-20 w-full bg-white py-[14px] @@if (context.mod) { header--@@mod }">
   <div class="container flex flex-wrap">
     @@if (!context.index) {
       <a class="header__logo flex items-center mr-auto" href="index.html" aria-label="Переход на главную">
@@ -6,19 +6,61 @@
           <img class="w-full h-full object-cover" src="./img/logo/logo.jpg" alt="Фотография" srcset="./img/logo/logo@2x.jpg 2x" width="32" height="32"/>
         </div>
       </a>
+      <ul class="flex flex-wrap mr-8 list-bools text-periwinkle">
+        <li class="list-bools__item">
+          <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors"
+                  data-tippy-content="<a href='mailto:stepanova-14-02@yandex.ru'>Stepanova-14-02@yandex.ru</a>
+                                          <button type='button'>
+                                            <svg width='16' height='16'>
+                                              <use xlink:href='#icon-copy'></use>
+                                            </svg>
+                                          </button>">
+            e-mail
+          </button>
+        </li>
+        <li class="list-bools__item">
+          <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">telegram</button>
+        </li>
+        <li class="list-bools__item">
+          <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">dribbble</button>
+        </li>
+        <li class="list-bools__item">
+          <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">behance</button>
+        </li>
+      </ul>
     }
     @@if (context.index) {
       <div class="header__logo flex items-center mr-auto">
         <div class="w-8 h-8 mr-4 rounded-full overflow-hidden">
           <img class="w-full h-full object-cover" src="./img/logo/logo.jpg" alt="Фотография" srcset="./img/logo/logo@2x.jpg 2x" width="32" height="32"/>
         </div>
-        <span>Степанова Мария</span>
-        <span class="block w-5 h-6">
-<!--          <svg class="w-full h-full" width="22" height="24" aria-hidden="true">-->
-<!--            <use xlink:href="#icon-hand"></use>-->
-<!--          </svg>-->
+        <span class="mr-2">Степанова Мария</span>
+        <span class="block w-[22px] h-6">
+          <img class="w-full h-full object-cover" src="./img/content/emoji/hand.jpg" srcset="./img/content/emoji/hand@2x.jpg 2x" alt="Эмодзи привет" width="22" height="24">
         </span>
       </div>
+    <ul class="flex flex-wrap mr-8 list-bools text-periwinkle" data-animation-contacts-header="opacity">
+      <li class="list-bools__item">
+        <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors"
+                data-tippy-content="<a href='mailto:stepanova-14-02@yandex.ru'>Stepanova-14-02@yandex.ru</a>
+                                        <button type='button'>
+                                          <svg width='16' height='16'>
+                                            <use xlink:href='#icon-copy'></use>
+                                          </svg>
+                                        </button>">
+          e-mail
+        </button>
+      </li>
+      <li class="list-bools__item">
+        <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">telegram</button>
+      </li>
+      <li class="list-bools__item">
+        <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">dribbble</button>
+      </li>
+      <li class="list-bools__item">
+        <button type="button" class="text-base text-ebony hover:text-east-bay transition-colors">behance</button>
+      </li>
+    </ul>
     }
     <a href="https://career.samolet.ru/" class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Резюме лежит здесь</a>
   </div>
