fix: header style

--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -1,4 +1,4 @@
-<header class="header fixed z-20 w-full bg-white py-[14px] @@if (context.mod) { header--@@mod }">
+<header class="header fixed z-20 w-full bg-white py-[14px] border-b-[1px] border-solid border-hawkes-blue @@if (context.mod) { header--@@mod }">
   <div class="container flex flex-wrap">
     @@if (!context.index) {
       <a class="header__logo flex items-center mr-auto" href="index.html" aria-label="Переход на главную">
