--- a/source/html/sitemap.html
+++ b/source/html/sitemap.html
@@ -61,6 +61,9 @@
         <li>
           <a href="index.html">Главная — index.html</a>
         </li>
+        <li>
+          <a href="project-1.html">Проект-1 — project-1.html</a>
+        </li>
         <!-- <li>
           <a href="#">Название страницы (состояние страницы, если отдельное) — ссылка на страницу</a>
         </li> -->
