--- a/source/html/index.html
+++ b/source/html/index.html
@@ -3,7 +3,7 @@
 <head>
 
   @@include("source/html/base/head.html")
-  <title>ProjectName — Главная</title>
+  <title>Степанова Мария — Главная</title>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
              alt="Фон"/>
       </div>
       <div class="container relative z-10">
-        <h1 class="hidden">Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <div class="flex max-w-[908px] mx-auto mb-10">
           <div class="relative w-72 h-64 shrink-0 mr-12">
             <div class="rounded-full overflow-hidden w-214px aspect-square">
