feat: add state inner page

--- a/source/html/project-last.html
+++ b/source/html/project-last.html
@@ -77,17 +77,17 @@
           </div>
         </div>
         <div class="flex">
-          <div class="flex flex-col max-w-[464px] mx-auto items-center">
-            <div class="rounded-full w-12 h-12 mb-4 bg-icon-pattern">
+          <div class="flex flex-col max-w-[464px] mb-4 mx-auto items-center">
+            <div class="rounded-full w-12 h-12 bg-icon-pattern">
               <div class="w-[22px] h-8">
                 <img class="w-full h-full object-cover" src="" alt="">
               </div>
             </div>
-            <p class="text-ebony text-s text-east-bay text-center mb-4">Мы досмотрели проект до конца.
+            <p class="text-ebony text-s text-east-bay text-center mb-4">Мы посмотрели все проекты.
               <br>
-              Посмотрим следующий проект?</p>
-            <a href="#"
-               class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Смотреть следующий</a>
+              С удовольствием расскажу о продуктах при встрече</p>
+            <a href="index.html"
+               class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Вернуться на главную</a>
           </div>
         </div>
       </div>
