--- a/source/html/sitemap.html
+++ b/source/html/sitemap.html
@@ -64,6 +64,12 @@
         <li>
           <a href="project-1.html">Проект-1 — project-1.html</a>
         </li>
+        <li>
+          <a href="project-2.html">Проект-2 — project-2.html</a>
+        </li>
+        <li>
+          <a href="project-last.html">Последний проект — project-last.html</a>
+        </li>
         <!-- <li>
           <a href="#">Название страницы (состояние страницы, если отдельное) — ссылка на страницу</a>
         </li> -->
