--- a/source/html/project-2.html
+++ b/source/html/project-2.html
@@ -86,8 +86,12 @@
             <p class="text-ebony text-s text-east-bay text-center mb-4">Мы досмотрели проект до конца.
               <br>
               Посмотрим следующий проект?</p>
-            <a href="#"
-               class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Смотреть следующий</a>
+            <div class="w-full mx-auto flex gap-2">
+              <a href="#"
+                 class="block border-[1px] border-solid border-ebony bg-white py-[3px] px-3 text-base text-ebony rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">К предыдущему</a>
+              <a href="#"
+                 class="block bg-ebony py-1 px-3 text-base text-white rounded-lg transition-transform ease-in-out duration-300 hover:translate-y-[-2px]">Смотреть следующий</a>
+            </div>
           </div>
         </div>
       </div>
